# docs/swagger.json
@@ -4,8 +4,7 @@
     ],
     "swagger": "2.0",
     "info": {
-        "description": "UAV route control applications",
-        "title": "drones",
+        "title": "Заявки контроля маршрутов БПЛА",
         "contact": {},
         "version": "0.0-0"
     },
@@ -14,7 +13,7 @@
     "paths": {
         "/book": {
             "put": {
-                "description": "Creates a new flight and adds current region in it",
+                "description": "Создаёт новую заявку и добавляет в неё регион",
                 "consumes": [
                     "application/json"
                 ],
@@ -22,12 +21,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "general"
+                    "Бронирование"
                 ],
-                "summary": "Book region",
+                "summary": "Забронировать регион",
                 "parameters": [
                     {
-                        "description": "Booking request parameters",
+                        "description": "Параметры запроса на бронирование",
                         "name": "Body",
                         "in": "body",
                         "required": true,
@@ -48,7 +47,7 @@
         },
         "/flight": {
             "get": {
-                "description": "Returns flight with given parameters",
+                "description": "Возвращает заяввку с указанными параметрами",
                 "consumes": [
                     "application/json"
                 ],
@@ -56,13 +55,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Get flight",
+                "summary": "Получить заявку",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Flights status",
+                        "description": "Статус заявки",
                         "name": "status",
                         "in": "query"
                     }
@@ -79,7 +78,7 @@
         },
         "/flight/delete/{flight_id}": {
             "put": {
-                "description": "Changes flight status to \"Удалён\"",
+                "description": "Меняет статус заявки на \"Удалён\"",
                 "consumes": [
                     "application/json"
                 ],
@@ -87,13 +86,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Deletes flight",
+                "summary": "Удалить заявку",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Flight id",
+                        "description": "id заявки",
                         "name": "flight_id",
                         "in": "path",
                         "required": true
@@ -111,7 +110,7 @@
         },
         "/flight/edit": {
             "put": {
-                "description": "Finds flight and updates it fields",
+                "description": "Находит заявку и обновляет её поля",
                 "consumes": [
                     "application/json"
                 ],
@@ -119,12 +118,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Edits flight",
+                "summary": "Отредактировать заявку",
                 "parameters": [
                     {
-                        "description": "Flight",
+                        "description": "Заявка",
                         "name": "flight",
                         "in": "body",
                         "schema": {
@@ -152,12 +151,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Edit flight status",
+                "summary": "Изменить статус заявки",
                 "parameters": [
                     {
-                        "description": "Request body",
+                        "description": "Тело запроса",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
@@ -178,7 +177,6 @@
         },
         "/flight_to_region/delete": {
             "put": {
-                "description": "Deletes region from flight",
                 "consumes": [
                     "application/json"
                 ],
@@ -186,12 +184,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Deletes flight_to_region connection",
+                "summary": "Удаляет связь региона с заявкой",
                 "parameters": [
                     {
-                        "description": "Request body",
+                        "description": "Тело запроса",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
@@ -212,18 +210,18 @@
         },
         "/flights": {
             "get": {
-                "description": "Returns list of all available flights",
+                "description": "Возвращает список заявок",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "flights"
+                    "Заявки"
                 ],
-                "summary": "Get flights",
+                "summary": "Получить заявки",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Flights status",
+                        "description": "Статус заявок",
                         "name": "status",
                         "in": "query"
                     }
@@ -240,7 +238,7 @@
         },
         "/login": {
             "post": {
-                "description": "Returns your token",
+                "description": "Возвращает jwt токен",
                 "consumes": [
                     "application/json"
                 ],
@@ -248,12 +246,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Аутентификация"
                 ],
-                "summary": "Login into system",
+                "summary": "Войти в систему",
                 "parameters": [
                     {
-                        "description": "Login request body",
+                        "description": "Тело запроса на вход",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
@@ -281,9 +279,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Аутентификация"
                 ],
-                "summary": "Logout",
+                "summary": "Выйти из системы",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -291,29 +289,9 @@
                 }
             }
         },
-        "/ping/{name}": {
-            "get": {
-                "description": "very very friendly response",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Tests"
-                ],
-                "summary": "Show hello text",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/app.pingResp"
-                        }
-                    }
-                }
-            }
-        },
         "/region/add": {
             "put": {
-                "description": "Creates a new reigon with parameters, specified in json",
+                "description": "Создаёт новый регион с праметрами, описанными в json'е",
                 "consumes": [
                     "application/json"
                 ],
@@ -321,12 +299,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Adds region to database",
+                "summary": "Добавить регион в БД",
                 "parameters": [
                     {
-                        "description": "New region's details",
+                        "description": "Данные нового регионы",
                         "name": "region",
                         "in": "body",
                         "required": true,
@@ -337,7 +315,7 @@
                 ],
                 "responses": {
                     "201": {
-                        "description": "Region created successfully",
+                        "description": "Регион был успешно создан",
                         "schema": {
                             "type": "string"
                         }
@@ -347,7 +325,7 @@
         },
         "/region/delete/{region_name}": {
             "put": {
-                "description": "Finds region by name and changes its status to \"Недоступен\"",
+                "description": "Находит регион по имени и меняет его статус на \"Недоступен\"",
                 "consumes": [
                     "application/json"
                 ],
@@ -355,9 +333,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Deletes region",
+                "summary": "Удалить регион",
                 "parameters": [
                     {
                         "type": "string",
@@ -379,18 +357,18 @@
         },
         "/region/delete_restore/{region_name}": {
             "get": {
-                "description": "Switches region status from \"Действует\" to \"Недоступен\" and back",
+                "description": "Меняет статус региона с \"Действует\" на \"Недоступен\" и наобороь",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Deletes or restores region",
+                "summary": "Удаляет или восстанавливает регион",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Regions name",
+                        "description": "Имя региона",
                         "name": "region_name",
                         "in": "path",
                         "required": true
@@ -408,7 +386,7 @@
         },
         "/region/edit": {
             "put": {
-                "description": "Finds region by name and updates its fields",
+                "description": "Находит регион по имени и обновляет его поля",
                 "consumes": [
                     "application/json"
                 ],
@@ -416,12 +394,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Edits region",
+                "summary": "Отредактировать регион",
                 "parameters": [
                     {
-                        "description": "Edited regioons data (must contain regions name or id)",
+                        "description": "Новые данные изменяемого региона (должно быть имя региона или его id)",
                         "name": "region",
                         "in": "body",
                         "required": true,
@@ -442,18 +420,18 @@
         },
         "/region/{region}": {
             "get": {
-                "description": "Returns region with given name",
+                "description": "Возвращает регион по имени",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Get region",
+                "summary": "Получить регион",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Regions name",
+                        "description": "Имя региона",
                         "name": "region",
                         "in": "path",
                         "required": true
@@ -471,7 +449,6 @@
         },
         "/regions": {
             "get": {
-                "description": "Returns all existing regions",
                 "consumes": [
                     "application/json"
                 ],
@@ -479,25 +456,25 @@
                     "application/json"
                 ],
                 "tags": [
-                    "regions"
+                    "Регионы"
                 ],
-                "summary": "Get all existing regions",
+                "summary": "Получить все регионы",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Regions name pattern",
+                        "description": "Паттерн имени региона",
                         "name": "name_pattern",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Regions district",
+                        "description": "Округ",
                         "name": "district",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Regions status (Действует/Недействителен)",
+                        "description": "Статус региона (Действует/Недействителен)",
                         "name": "status",
                         "in": "query"
                     }
@@ -514,7 +491,7 @@
         },
         "/register": {
             "post": {
-                "description": "adds a new user to the database",
+                "description": "Добавляет нового пользователя в БД",
                 "consumes": [
                     "application/json"
                 ],
@@ -522,12 +499,12 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth"
+                    "Аутентификация"
                 ],
-                "summary": "register a new user",
+                "summary": "Зарегистрировать нового пользователя",
                 "parameters": [
                     {
-                        "description": "Request body",
+                        "description": "Тело запроса",
                         "name": "request_body",
                         "in": "body",
                         "required": true,
@@ -569,14 +546,6 @@
                     "type": "integer"
                 },
                 "token_type": {
-                    "type": "string"
-                }
-            }
-        },
-        "app.pingResp": {
-            "type": "object",
-            "properties": {
-                "status": {
                     "type": "string"
                 }
             }
